fix: tabella amministratore croppata durante la stampa

--- a/src/css/print.css
+++ b/src/css/print.css
@@ -184,6 +184,10 @@
     header{
         border-radius: 20px;
     }
+
+    th{
+        font-size: 1em;
+    }
 }
 
 
